# MIDSX

./: .gitignore  .gitmodules  AddGitSubmodule.cmake  CMakeLists.txt  Dockerfile  Doxyfile  MIDSXConfig.cmake.in  README.md  _core_8h_source.html  annotated.html  class_a_a_cuboid_volume_tally-members.html  class_a_a_cuboid_volume_tally.html  class_a_a_cuboid_volume_tally__coll__graph.map  class_a_a_cuboid_volume_tally__coll__graph.md5  class_a_a_cuboid_volume_tally__inherit__graph.map  class_a_a_cuboid_volume_tally__inherit__graph.md5  class_beam_directionality-members.html  class_beam_directionality.html  class_beam_directionality__coll__graph.map  class_beam_directionality__coll__graph.md5  class_beam_directionality__inherit__graph.map  class_beam_directionality__inherit__graph.md5  class_coherent_scattering-members.html  class_coherent_scattering.html  class_coherent_scattering__coll__graph.map  class_coherent_scattering__coll__graph.md5  class_coherent_scattering__inherit__graph.map  class_coherent_scattering__inherit__graph.md5  class_computational_domain-members.html  class_computational_domain.html  class_computational_domain__coll__graph.map  class_computational_domain__coll__graph.md5  class_count_surface_quantity-members.html  class_count_surface_quantity.html  class_count_surface_quantity__coll__graph.map  class_count_surface_quantity__coll__graph.md5  class_count_value-members.html  class_count_value.html  class_count_value__coll__graph.map  class_count_value__coll__graph.md5  (+400 more)
.github/workflows/: docker-build.yml  doxygen.yml
cpp_simulations/CT_w_voxelized_solid/: CMakeLists.txt  CT_w_voxelized_solid.cpp  CT_w_voxelized_solid.json
cpp_simulations/half_value_layer/: CMakeLists.txt  generate_hvl_data.sh  hvl.cpp  hvl.json  hvl_100kVp.cpp  hvl_100keV.cpp  hvl_30kVp.cpp  hvl_30keV.cpp
cpp_simulations/half_value_layer/data/: Al_100kVp_AK_0.txt  Al_100kVp_AK_hvl.txt  Al_100kVp_AK_qvl.txt  Al_100keV_AK_0.txt  Al_100keV_AK_hvl.txt  Al_100keV_AK_qvl.txt  Al_30kVp_AK_0.txt  Al_30kVp_AK_hvl.txt  Al_30kVp_AK_qvl.txt  Al_30keV_AK_0.txt  Al_30keV_AK_hvl.txt  Al_30keV_AK_qvl.txt
cpp_simulations/lead_attenuation/: CMakeLists.txt  lead_attenuation.cpp  lead_attenuation.json
cpp_simulations/long_body/: CMakeLists.txt  long_body.cpp  long_body.json
cpp_simulations/radiography/: CMakeLists.txt  radiography.cpp  radiography_0_degrees.json  radiography_15_degrees.cpp  radiography_15_degrees.json  radiography_test.cpp  test.json
cpp_simulations/radiography/data/: 15_deg_56keV.txt  15_degrees_full_field_vois.txt  roi_measurements.txt
data/: filtered_spectrum.csv  sql_database_generator.ipynb
data/comp_domains/: al_hvl_100kVp.json  al_hvl_30keV.json  al_hvl_empty.json
data/reference_set/: .~lock.07-Case 2 Results.xlsx#  01-Material Definitions.xlsx  02-Case 5 Material Definitions.xlsx  03-X-Ray Spectra Definition.xlsx  04-Case 1 Air Mass Energy Absorption Coefficients.xlsx  06-Case 1 Results.xlsx  07-Case 2 Results.xlsx  08-Case 3 Results.xlsx  09-Case 4 Results.xlsx  10-Case 5 Results.xlsx  11-Case 6 Results.xlsx  12-README.docx
data/source_distributions/: RQR8_W_AL_100kVp_E_spectrum.csv  RQR9_W_AL_120kVp_E_spectrum.csv  RQRM3_MO_MO_30kVp_E_spectrum.csv
docs/: Doxyfile  gen_materials_page.py  layout.xml
docs/additional_docs/: gen_materials_page.py
docs/html/: _core_8h_source.html  annotated.html  annotated_dup.js  class_a_a_cuboid_volume_tally-members.html  class_a_a_cuboid_volume_tally.html  class_a_a_cuboid_volume_tally.js  class_a_a_cuboid_volume_tally__coll__graph.map  class_a_a_cuboid_volume_tally__coll__graph.md5  class_a_a_cuboid_volume_tally__inherit__graph.map  class_a_a_cuboid_volume_tally__inherit__graph.md5  class_beam_directionality-members.html  class_beam_directionality.html  class_beam_directionality.js  class_beam_directionality__inherit__graph.map  class_beam_directionality__inherit__graph.md5  class_coherent_scattering-members.html  class_coherent_scattering.html  class_coherent_scattering.js  class_count_value.html  (+916 more)
include/: constants.h  data_access_object.h  detector.h  helper.h  interaction_data.h  interpolators.h  material.h  material_data.h  material_helpers.h  material_properties.h  particle.h  particle_interaction_behavior.h  photon.h  photon_interactions.h  physicsEngine.h  physics_engine.h  physics_engine_data_service.h  probabilityDist.h  probability_dist.h  quantity.h  quantity_container.h  source.h  spline.h  tally.h  tally_data.h  vec3.h  voxel.h  voxelGrid.h  voxel_grid.h
python/: CMakeLists.txt
python/_pymidsx/: interaction_data_wrapper.cpp  interaction_data_wrapper.h  midsx_wrapper.cpp  quantity_container_wrapper.cpp  quantity_container_wrapper.h  quantity_wrapper.cpp  quantity_wrapper.h  source_wrapper.cpp  source_wrapper.h  tally_wrapper.cpp  tally_wrapper.h  voxel_grid_wrapper.cpp  voxel_grid_wrapper.h
python_tests/: interaction_data_graphs.py
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  (+24 more)
src/: data_access_object.cpp  detector.cpp  interaction_data.cpp  interpolationTest.cpp  interpolators.cpp  main.cpp  material.cpp  material_data.cpp  material_properties.cpp  particle.cpp  photon_interactions.cpp  physics_engine.cpp  physics_engine_data_service.cpp  probability_dist.cpp  quantity.cpp  quantity_container.cpp  randomSamplingTest.cpp  source.cpp  tally.cpp  voxel_grid.cpp
tests/distributions/: CMakeLists.txt  distributions.cpp  source_ang_dist.cpp
utility_scripts/: build_cpp_sims.sh  case_5_materials_to_sql.ipynb  creating_nii_voxels.ipynb  process_data.sh  sql_database_generator.ipynb  sql_energy_absorption_coeffecient_generator.ipynb  sql_material_generator.ipynb
(+298 files in other folders)
